# invenio-config-kth

./: .editorconfig  .gitignore  .pylintrc  CHANGES.md  MANIFEST.in  Makefile  Pipfile  README.md  fetch_voc.py  increment_version.sh  licence  main.py  requirements.txt  run-tests.sh  setup.cfg  setup.py
invenio_config_kth/: __init__.py  config.py  ext.py  startup.py  utils.py
invenio_config_kth/permissions/: __init__.py  generators.py  policies.py
invenio_subjects_cessda/: __init__.py  config.py  convert.py  fetch_voc.py  schemas.py  test_pandas.py  utils.py  writer.py
invenio_subjects_cessda/downloads/: result.json
invenio_subjects_cessda/vocabularies/: __init__.py  cessda_voc.yaml  result.json  vocabularies.yaml
tests/: __init__.py  data.py  fixtures.py  test_convert.py  test_fetch_voc.py  test_invenio_config_kth.py  test_main.py  test_schemas.py  test_utils.py  test_writer.py
