[metadata]
name= invenio-config-kth
version = attr: invenio_config_kth.__version__
description = invenio-config-kth vocabularies
long_description_content_type= text/markdown
long_description = file:README.md, CHANGES.md
keywords=invenio inveniordm subjects invenio-config-kth
license=MIT
author=KTH Royal Institute of Technology
author_email=info@kth.se
platforms=any,
url=https://github.com/Samk13/invenio-config-kth
classifiers=
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Flask>=0.11.1

[options.extras_require]
tests =
    pytest-black>=0.3.12
    pytest-invenio>=2.1.0
    aiohttp>=3.8.3
    click>=8.1.3
    PyYAML>=6.0

[options.entry_points]
console_scripts =
    invenio-config-kth = main:main

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_config_kth --cov-report=term-missing
filterwarnings = ignore::pytest.PytestDeprecationWarning
testpaths = tests invenio_config_kth

[isort]
profile=black

[pydocstyle]
add_ignore = D401, E501, D100
