[metadata]
name= invenio-config-kth
version = attr: invenio_config_kth.__version__
description = invenio-config-kth vocabularies
long_description_content_type= text/markdown
long_description = file:README.md, CHANGES.md
keywords=invenio rdm config kth
license=MIT
author=KTH Royal Institute of Technology
author_email=info@kth.se
platforms=any,
url=https://github.com/Samk13/invenio-config-kth
classifiers=
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Flask>=0.11.1
    Flask-BabelEx>=0.9.4
    invenio-app-rdm>=9.0.0
    invenio-mail>=1.0.2,<1.1.0

[options.extras_require]
tests =
    pytest-black>=0.3.12
    pytest-invenio>=2.1.0
    Babel>=1.3
    pytest-runner>=3.0.0,<5
    invenio_search>=2.0.0
    opensearch_dsl>=2.0.0
    setuptools>=65.5.1
    twine>=4.0.1

[options.entry_points]
invenio_base.apps =
    invenio_config_kth = invenio_config_kth.ext:InvenioConfigKTH
invenio_base.api_apps =
    invenio_config_kth = invenio_config_kth.ext:InvenioConfigKTH

# invenio_config_kth_startup ->
invenio_base.blueprints =
    invenio_config_kth_startup = invenio_config_kth.startup:blueprint
invenio_base.api_blueprints =
    invenio_config_kth_startup = invenio_config_kth.startup:blueprint

# configs are loaded by invenio-config in lexicographic order
# of their entrypoint names, and we want to override the other
# configs here, while not overriding invenio.cfg (which could
# be done in the ext.init_config(app) method)
invenio_config.module =
    zzz_invenio_config_kth = invenio_config_kth.config


[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_config_kth --cov-report=term-missing
filterwarnings = ignore::pytest.PytestDeprecationWarning
testpaths = tests invenio_config_kth

[isort]
profile=black

[pydocstyle]
add_ignore = D401, E501, D100

[aliases]
test = pytest
